# MAINREPO

./: .gitignore  README.md  primenumbers.txt
C/: Exercise10.c  exercise01.c  exercise02.c  exercise03.c  exercise04.c  exercise05.c  exercise06.c  exercise07.c  exercise08.c
C/CS210/: ACE0.c  ACE1.c  ACE10.c  ACE10List.c  ACE10List.h  ACE11.c  ACE11List.c  ACE11List.h  ACE13List.c  ACE14List.h  ACE15.c  ACE15List.c  ACE15List.h  ACE2List.h  ACE3.c  ACE3List.c  ACE3List.h  ACE4.c  ACE4List.c  ACE4List.h  ACE5.c  ACE5List.c  ACE5List.h  ACE6.c  ACE6List.c  ACE7List.c  ACE7List.h  ACE8.c  ACE8List.c  ACE8List.h  ACE9.c  ACE9List.c  employee.c  employee.h  exercise03.c  exercise08.c  exercise09.c  exercise10.c
HTML/GroupProject/: EWaste.html  Positive effect of electric and autonomous cars.docx  Summary.docx  template.html
HTML/PracticeAssignment/: Evaluation.docx  styling.css
Haskell/CS260/: Assignment1.hs  ClassTest.hs  Week2Lab.hs  Week3Lab.hs  Week4Lab.hs  Week5Lab.hs  (+6 more)
Haskell/CS316/: CS316-Y2023.cabal  Test1.hs  Week01Problems.hs  Week02Problems.hs  Week03Problems.hs  Week04Problems.hs
Java/: JUnitHelp.txt  Lab1Template.java
Python/: BinarySearch.py  FINLAYCODE.py  NEWCODE.py  SQLiteconnection.py  binarytodec.py  calculator.py  dectobinary.py  dogcollar.py  euclid.py  gcd.py  keylog.py  listordercheck.py  mileageCosts.py  primefinder.py  virus.py
RandomCode/: CS208_Coursework1  CS208_Coursework2
SQL/: Lab1Work.sql  Lab2Work.sql  Lab3Work.sql  Lab5Work.sql  lab11.sql  lab12.sql  lab13.sql  lab1ex.sql  lab4create.sql  lab4indexes.sql  lab4teams.sql
(+164 files in other folders)
