name:                CS316-Y2023
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/bobatkey/CS316-Y2022#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10

-- executable hello-cs316
library
  exposed-modules:     Week01,
                       Week01Problems,
                       Week02,
                       Week02Problems,
                       Week03,
                       Week03Problems,
                       Week04,
                       Week04Problems
--  ghc-options:         -fwarn-incomplete-patterns
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.3,
                       HTTP >= 4000.3.14
